# weathergram

./: .gitignore  Dockerfile  compose.example.yaml  pyproject.toml
src/: config.py  main.py  njct.py
src/bot/: __init__.py  framework.py  interval.py  location.py  user_flow.py  weather.py
src/components/: common.py  event_loop.py  json_parser.py  location.py  scheduler.py  weather.py
src/database/: interface.py  migrate.py  schema.py
