[project]
name = "sirius-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=24.2.0",
    "httpx>=0.27.2",
    "loguru>=0.7.2",
    "sqlalchemy>=2.0.36",
    "telethon>=1.37.0",
    "typed-settings>=24.5.0",
]

[project.optional-dependencies]
fast = ["cattrs>=24.1.2", "orjson>=3.10.10", "uvloop>=0.21.0"]

[tool.uv]
dev-dependencies = ["loguru-mypy>=0.0.4"]
